--- a/public/css/add.css
+++ b/public/css/add.css
@@ -11,7 +11,8 @@ body {
         }
 
         .mb-3 .form-check-input {
-            background-color: red;
+            background-color: rgba(255, 255, 255, .15);  
+            backdrop-filter: blur(5px);
         }
 
         .container{
