--- a/public/css/browse.css
+++ b/public/css/browse.css
@@ -9,7 +9,8 @@
       padding: 0;
       width: 100%;
       position: relative;
-      background-color: black;
+      background-image:url('/images/background1.jpg') ;
+      background-repeat:none ;
       z-index: -1;
   }
   /* main styling start */
