--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -6,12 +6,10 @@ body {
     color: aliceblue;
 }
 
-.btn {
-    background-color: red;
-}
 
 .mb-3 .form-check-input {
-    background-color: red;
+    background-color: rgba(255, 255, 255, .15);  
+            backdrop-filter: blur(5px);
 }
 
 .container {
